--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,12 +9,12 @@ services:
     ports:
       - '8080:8080'   # development only
     environment:
-      turkeyCfg_thumbnail_server: cors.${HUB_DOMAIN:?error}/nearspark
-      turkeyCfg_base_assets_path: https://assets.${HUB_DOMAIN:?error}/hubs/
-      turkeyCfg_non_cors_proxy_domains: ${HUB_DOMAIN:?error},assets.${HUB_DOMAIN:?error},demo.hubsfoundation.org,*.demo.hubsfoundation.org
-      turkeyCfg_reticulum_server: ${HUB_DOMAIN:?error}
-      turkeyCfg_cors_proxy_server: cors.${HUB_DOMAIN:?error}
-      turkeyCfg_shortlink_domain: ${HUB_DOMAIN:?error}
+      turkeyCfg_thumbnail_server: cors.${HUB_DOMAIN:?host name}/nearspark
+      turkeyCfg_base_assets_path: https://assets.${HUB_DOMAIN:?host name}/hubs/
+      turkeyCfg_non_cors_proxy_domains: ${HUB_DOMAIN:?host name},assets.${HUB_DOMAIN:?host name},demo.hubsfoundation.org,*.demo.hubsfoundation.org
+      turkeyCfg_reticulum_server: ${HUB_DOMAIN:?host name}
+      turkeyCfg_cors_proxy_server: cors.${HUB_DOMAIN:?host name}
+      turkeyCfg_shortlink_domain: ${HUB_DOMAIN:?host name}
       turkeyCfg_tier: p1
     healthcheck:
       test: ['CMD', 'curl', '-fk', 'https://hubs:8080/healthz']
@@ -29,13 +29,13 @@ services:
       - '8081:8080'   # development only
     #      - '9090:9090'   # development only
     environment:
-      turkeyCfg_thumbnail_server: cors.${HUB_DOMAIN:?error}/nearspark
-      turkeyCfg_base_assets_path: https://assets.${HUB_DOMAIN:?error}/spoke/
-      turkeyCfg_non_cors_proxy_domains: ${HUB_DOMAIN:?error},assets.${HUB_DOMAIN:?error},demo.hubsfoundation.org,*.demo.hubsfoundation.org
-      turkeyCfg_reticulum_server: ${HUB_DOMAIN:?error}
-      turkeyCfg_cors_proxy_server: cors.${HUB_DOMAIN:?error}
-      turkeyCfg_shortlink_domain: ${HUB_DOMAIN:?error}
-      turkeyCfg_hubs_server: ${HUB_DOMAIN:?error}
+      turkeyCfg_thumbnail_server: cors.${HUB_DOMAIN:?host name}/nearspark
+      turkeyCfg_base_assets_path: https://assets.${HUB_DOMAIN:?host name}/spoke/
+      turkeyCfg_non_cors_proxy_domains: ${HUB_DOMAIN:?host name},assets.${HUB_DOMAIN:?host name},demo.hubsfoundation.org,*.demo.hubsfoundation.org
+      turkeyCfg_reticulum_server: ${HUB_DOMAIN:?host name}
+      turkeyCfg_cors_proxy_server: cors.${HUB_DOMAIN:?host name}
+      turkeyCfg_shortlink_domain: ${HUB_DOMAIN:?host name}
+      turkeyCfg_hubs_server: ${HUB_DOMAIN:?host name}
     healthcheck:
       test: ['CMD', 'curl', '-fk', 'https://spoke:8080/healthz']
 
@@ -99,9 +99,9 @@ services:
     restart: unless-stopped
     depends_on:
       pgbouncer: { condition: service_healthy, restart: true }
+    #    network_mode: service:reticulum
     networks:
       - hubs
-    #    network_mode: service:reticulum
     ports:
       - '127.0.0.1:3000:3000'
     environment:
@@ -109,6 +109,7 @@ services:
       PGRST_DB_SCHEMA: ret0_admin
       PGRST_DB_ANON_ROLE: ${DB_USER:-postgres}
       PGRST_DB_URI: 'postgres://${DB_USER:-postgres}:${DB_PASS:-123456}@pgbouncer/${DB_NAME:-retdb}'
+      PGRST_JWT_SECRET: ${PGRST_JWT_SECRET:?generated public key}
   #    healthcheck:
   #      test: ['CMD', 'postgrest', '--ready']   # when updated to post-2025-09-28
 
@@ -136,21 +137,22 @@ services:
       POD_IP: reticulum
       POD_NAME: reticulum
       turkeyCfg_POD_NS: hcce   # only for substitution in config.toml.template?
-      turkeyCfg_NODE_COOKIE: ${NODE_COOKIE:?error}
-      turkeyCfg_HUB_DOMAIN: ${HUB_DOMAIN:?error}
-      turkeyCfg_DOMAIN: ${HUB_DOMAIN:?error}
+      turkeyCfg_NODE_COOKIE: ${NODE_COOKIE:?random string}
+      turkeyCfg_HUB_DOMAIN: ${HUB_DOMAIN:?host name}
+      turkeyCfg_DOMAIN: ${HUB_DOMAIN:?host name}
       turkeyCfg_DB_USER: ${DB_USER:-postgres}
       turkeyCfg_DB_PASS: ${DB_PASS:-123456}
       turkeyCfg_DB_NAME: ${DB_NAME:-retdb}
       turkeyCfg_DB_HOST: ${DB_HOST:-pgbouncer}
       turkeyCfg_DB_HOST_T: ${DB_HOST_T:-pgbouncer-t}
-      turkeyCfg_GUARDIAN_KEY: ${GUARDIAN_KEY:?error}
-      turkeyCfg_PHX_KEY: ${PHX_KEY:?error}
-      turkeyCfg_SMTP_SERVER: ${SMTP_SERVER:?error}
-      turkeyCfg_SMTP_PORT: ${SMTP_PORT:?error}
-      turkeyCfg_SMTP_USER: ${SMTP_USER:?error}
-      turkeyCfg_SMTP_PASS: ${SMTP_PASS:?error}
-      turkeyCfg_ADM_EMAIL: ${ADM_EMAIL:?error}
+      turkeyCfg_GUARDIAN_KEY: ${GUARDIAN_KEY:?random string}
+      turkeyCfg_PERMS_KEY: ${PERMS_KEY:?generated private key}
+      turkeyCfg_PHX_KEY: ${PHX_KEY:?random string}
+      turkeyCfg_SMTP_SERVER: ${SMTP_SERVER:?host name}
+      turkeyCfg_SMTP_PORT: ${SMTP_PORT:?possibly 2587}
+      turkeyCfg_SMTP_USER: ${SMTP_USER:?email username}
+      turkeyCfg_SMTP_PASS: ${SMTP_PASS:?email password}
+      turkeyCfg_ADM_EMAIL: ${ADM_EMAIL:?email address}
       turkeyCfg_SKETCHFAB_API_KEY: ${SKETCHFAB_API_KEY:-}
       turkeyCfg_IMG_PROXY: nearspark
       turkeyCfg_TENOR_API_KEY: ${TENOR_API_KEY:-}
@@ -169,44 +171,47 @@ services:
       - certbot-etc:/etc/letsencrypt:ro
     network_mode: host   # needs to listen to many UDP ports
     extra_hosts:
-      - host.docker.internal=host-gateway   # TODO: use this to set external-ip
+      - host.docker.internal=host-gateway
     environment:
-      HTTPS_CERT_FULLCHAIN: /etc/letsencrypt/live/${HUB_DOMAIN:?error}/fullchain.pem
-      HTTPS_CERT_PRIVKEY: /etc/letsencrypt/live/${HUB_DOMAIN:?error}/privkey.pem
+      perms_key: ${PERMS_KEY:?generated private key}
+      HTTPS_CERT_FULLCHAIN: /etc/letsencrypt/live/${HUB_DOMAIN:?host name}/fullchain.pem
+      HTTPS_CERT_PRIVKEY: /etc/letsencrypt/live/${HUB_DOMAIN:?host name}/privkey.pem
     healthcheck:   # Mediasoup 5 has a built-in healthcheck
       #      test: ['CMD', 'curl', '-fk', 'https://dialog:4443/']
       test: ['CMD', 'curl', '-f', 'http://host.docker.internal:7000/meta']
 
-  nginx:
+  router:
     image: nginx:1.29-alpine
-    container_name: nginx
+    container_name: router
     restart: unless-stopped
     depends_on:
       hubs: { condition: service_healthy }
       spoke: { condition: service_healthy, required: false }
       ret: { condition: service_healthy }
       dialog: { condition: service_healthy, required: false }
+    networks:
+      - hubs
     ports:
       - '80:80'
       - '443:443'
 #      - '4443:4443'
+    extra_hosts:
+      - host.docker.internal=host-gateway
     volumes:
       - ./nginx-conf:/etc/nginx/conf.d
       - ./single:/var/www/single:ro
       - ./support:/var/www/support:ro
       - acme-challenge:/var/www/acme-challenge:ro
       - certbot-etc:/etc/letsencrypt:ro
-    networks:
-      - hubs
     environment:
-      HUB_DOMAIN: ${HUB_DOMAIN:?error}
+      HUB_DOMAIN: ${HUB_DOMAIN:?host name}
     command: |
       /bin/sh -c "
       for file in /etc/nginx/conf.d/*.template; do
         envsubst '$$HUB_DOMAIN' < $$file > $${file%.template}.conf;
       done && exec nginx -g 'daemon off;'"
     healthcheck:
-      test: ['CMD', 'curl', 'http://127.0.0.1/healthz']
+      test: ['CMD', 'curl', '-f', 'http://host.docker.internal/healthz']
       interval: 15s
       timeout: 10s
       retries: 3
@@ -250,10 +255,10 @@ services:
       PSQL: 'postgres://${DB_USER:-postgres}:${DB_PASS:-123456}@localhost/${DB_NAME:-retdb}'
       COTURN_MIN_PORT: ${COTURN_MIN_PORT:-49152}
       COTURN_MAX_PORT: ${COTURN_MAX_PORT:-51609}
-      HTTPS_CERT_FULLCHAIN: /etc/letsencrypt/live/${HUB_DOMAIN:?error}/fullchain.pem
-      HTTPS_CERT_PRIVKEY: /etc/letsencrypt/live/${HUB_DOMAIN:?error}/privkey.pem
+      HTTPS_CERT_FULLCHAIN: /etc/letsencrypt/live/${HUB_DOMAIN:?host name}/fullchain.pem
+      HTTPS_CERT_PRIVKEY: /etc/letsencrypt/live/${HUB_DOMAIN:?host name}/privkey.pem
     healthcheck:
-      test: ['CMD', 'nc', '-zv', '${HUB_DOMAIN:?error}', '5349']
+      test: ['CMD', 'nc', '-zv', '${HUB_DOMAIN:?host name}', '5349']
 
 
 volumes:
