--- a/nginx-conf/base.template
+++ b/nginx-conf/base.template
@@ -25,12 +25,19 @@ server {
             include /etc/nginx/conf.d/proxy-directives.inc;
         }
 
+        location /api/ {   # https://github.com/Hubs-Foundation/hubs-cloud/issues/380
+            proxy_pass http://ret:4001;
+            proxy_buffering off;
+
+            include /etc/nginx/conf.d/proxy-directives.inc;
+        }
+
         location /socket/ {
             proxy_pass http://ret:4001;
-            proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
 #             proxy_read_timeout 60s;
+            include /etc/nginx/conf.d/proxy-directives.inc;
         }
 
 # https://single.hominidsoftware.com/api/v1/meta
