Router doesn't add Access-Control-Allow-Origin header

--- a/haproxy-hubs/haproxy.cfg
+++ b/haproxy-hubs/haproxy.cfg
@@ -77,7 +77,7 @@ frontend  http
 #  http-request redirect scheme https code 308 unless { ssl_fc } || acme_challenge
   http-request set-header Host %[req.hdr(Host),lower]
   http-request set-path /_drop_ if { path_beg /api-internal }
-  http-response set-header access-control-allow-origin "https://moa.local"
+#  http-response set-header access-control-allow-origin "https://moa.local"
   # passes client's IP address to the server and prevent against attempts
   # to inject bad contents
   http-request del-header x-forwarded-for
