--- a/nginx-conf/support.template
+++ b/nginx-conf/support.template
@@ -15,9 +15,10 @@ server {
         }
 
         location / {
-                root /var/www/support;
-                index index.html index.htm index.txt;
-                try_files $uri $uri/ $uri.html =404;
+            root /var/www/support;
+            index index.html index.htm index.txt;
+            try_files $uri $uri/ $uri.html =404;
+            add_header Access-Control-Allow-Origin "$HUB_DOMAIN";
         }
 
         ssl_certificate     /etc/letsencrypt/live/$HUB_DOMAIN/fullchain.pem;
