--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
       turkeyCfg_cors_proxy_server: cors.${HUB_DOMAIN:?host name}
       turkeyCfg_shortlink_domain: ${HUB_DOMAIN:?host name}
       turkeyCfg_tier: p1
+    extra_hosts:
+      - host.docker.internal=host-gateway
     healthcheck:
       test: ['CMD', 'curl', '-fk', 'https://hubs:8080/healthz']
 
@@ -36,6 +38,8 @@ services:
       turkeyCfg_cors_proxy_server: cors.${HUB_DOMAIN:?host name}
       turkeyCfg_shortlink_domain: ${HUB_DOMAIN:?host name}
       turkeyCfg_hubs_server: ${HUB_DOMAIN:?host name}
+    extra_hosts:
+      - host.docker.internal=host-gateway
     healthcheck:
       test: ['CMD', 'curl', '-fk', 'https://spoke:8080/healthz']
 
@@ -165,6 +169,8 @@ services:
       turkeyCfg_PHOTOMNEMONIC: http://photomnemonic:5000
       turkeyCfg_SPEELYCAPTOR: http://speelycaptor:5000
       turkeyCfg_STORAGE_QUOTA_GB: 1000
+      turkeyCfg_DIALOG_HOSTNAME: host.docker.internal
+      turkeyCfg_DIALOG_PORT: 4443
       HUBS_ADMIN_INTERNAL_HOSTNAME: hubs
       HUBS_CLIENT_INTERNAL_HOSTNAME: hubs
       SPOKE_INTERNAL_HOSTNAME: spoke
